--- a/publication/fast23-2/index.html
+++ b/publication/fast23-2/index.html
@@ -772,6 +772,53 @@ In this paper, we propose SMRSTORE, an SMR-based storage engine for standard-cla
 
 
 
+<div class="btn-links mb-3">
+  
+  
+
+
+
+
+
+
+
+
+  
+    
+  
+
+
+
+<a class="btn btn-outline-primary btn-page-header" href="https://www.usenix.org/system/files/fast23-zhou-su.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="https://www.youtube.com/watch?v=b_iW94OQmbY" target="_blank" rel="noopener">
+  Video
+</a>
+
+
+
+
+
+</div>
+
 
   
 </div>
