--- a/publication/dac20/index.html
+++ b/publication/dac20/index.html
@@ -855,7 +855,7 @@
   
   <a class="badge badge-light" href="/tag/ssd/">SSD</a>
   
-  <a class="badge badge-light" href="/tag/storage/">storage</a>
+  <a class="badge badge-light" href="/tag/interface/">interface</a>
   
 </div>
 
