--- a/publication/fast23-2/index.html
+++ b/publication/fast23-2/index.html
@@ -803,6 +803,14 @@ In this paper, we propose SMRSTORE, an SMR-based storage engine for standard-cla
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="/publication/fast23-2/fast23_smrstore.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
+
 
 
   
