--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -1005,7 +1005,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://giorgioercixu.github.io">Giorgio (Erci) Xu</a></h5>
-      <h6 class="card-subtitle">Storage Researcher</h6>
+      <h6 class="card-subtitle">Storage Nomad</h6>
       <p class="card-text">My research interests include storage system and distributed computing.</p>
       <ul class="network-icon" aria-hidden="true">
   
