--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Storage Researcher" />
+  <meta name="description" content="Storage Nomad" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://giorgioercixu.github.io/404.html" />
@@ -295,7 +295,7 @@
   <meta property="og:site_name" content="Giorgio (Erci) Xu" />
   <meta property="og:url" content="https://giorgioercixu.github.io/404.html" />
   <meta property="og:title" content="404 Page not found | Giorgio (Erci) Xu" />
-  <meta property="og:description" content="Storage Researcher" /><meta property="og:image" content="https://giorgioercixu.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Storage Nomad" /><meta property="og:image" content="https://giorgioercixu.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://giorgioercixu.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
