--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@ name of Giorgio, much easier to pronounce now, innit?</p>
 
   <div class="alert alert-note">
   <div>
-    Check the full list <a href="./publications/">here</a>.
+    Check the full list <a href="./publication/">here</a>.
   </div>
 </div>
 
