--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         including USENIX OSDI, FAST, ATC and ACM Eurosys. He is the recipient of two USENIX FAST Best Paper Awards
                         (<a href="https://www.usenix.org/conference/fast23/presentation/lu" target="_blank" rel="noopener">FAST'23</a> and
                         <a href="https://www.usenix.org/conference/fast24/presentation/zhang-weidong" target="_blank" rel="noopener">FAST'24</a>)
-                        and ACM SIGOPS China Rising Star Award. My 
+                        and ACM SIGOPS China Rising Star Award.
 
                     </p>
                 </div>
@@ -97,7 +97,7 @@
             <li class="media mb-3">
                 <div class="media-body">
                     <ul>
-                        <li>Apr. 2024: Invited to give an virtual talk on Cloud Block Store at UIUC <a href="https://systems-seminar-uiuc.github.io/spring24/"target="_blank" rel="noopener">Systems Research Seminar 2024 Spring</a>.</li>
+                        <li>Apr. 2024: Invited to give a virtual talk on Cloud Block Store at UIUC <a href="https://systems-seminar-uiuc.github.io/spring24/"target="_blank" rel="noopener">Systems Research Seminar 2024 Spring</a>.</li>
                         <li>Apr. 2024: Invited to serve TPC for NSDI'25, DSN'25 and Chinasys'24 Summer. </li>
                         <li>Mar. 2024: Invited to give a virtual guest lecture on cloud computing at <a href="https://changlousys.github.io/CS4740/spring24/schedule/"target="_blank" rel="noopener">University of Virginia</a>.</li>
                         <li>Mar. 2024: Invited to give a talk on "How to Write a System Paper" at CUHK, Tsinghua Univiersity and HIT(SZ). Slides coming soon...</li>
