--- a/publication/index.html
+++ b/publication/index.html
@@ -12,7 +12,7 @@
 
 <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Giorgio (Erci) Xu</a>
+            <a class="navbar-brand" href="#">G(E)X</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -54,7 +54,6 @@
     <div class="container">
         
 <body>
-    <h1>Publications</h1>
     <ul>
         
             <li>
