deploy: giorgioercixu/flask-personal@f2de915dff956e07d916ca59b3d92dd283552972

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
     <div class="row flex-lg-row-reverse align-items-center g-5">
         <div class="col-10 col-md-8 col-lg-6 mx-auto">
             <img src="./static/figures/avatar.jpeg" class="d-block mx-lg-auto img-fluid rounded-circle" alt="Profile Picture of Erci Xu" loading="lazy">
-        </div>
+            <div class="social-links text-center mt-3">
+                <a href="https://twitter.com/giorgioercixu" target="_blank"><i class="fab fa-twitter" style="font-size:24px; margin-right: 10px;"></i></a>
+                <a href="https://scholar.google.com/citations?user=7Yc6A1QAAAAJ" target="_blank"><i class="fas fa-graduation-cap" style="font-size:24px; margin-right: 10px;"></i></a>
+                <a href="https://www.zhihu.com/people/x-giorgio" target="_blank"><i class="fab fa-zhihu" style="font-size:24px;"></i></a>
+            </div>
+        </div>        
         <div class="col-lg-6">
             <!-- Bio section -->
             <h2 class="fs-3">Short Bio</h2>
@@ -142,10 +147,6 @@
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
                 <span class="text-muted">© 2024 G(E)X; All Rights Reserved!</span>
-            </div>
-            <div class="col-md-4 justify-content-end d-flex">
-                <a href="https://twitter.com/giorgioercixu" class="me-2 text-muted"><i class="fab fa-twitter"></i></a>
-                <a href="https://scholar.google.com/citations?user=7Yc6A1QAAAAJ" class="me-2 text-muted"><i class="fab fa-google"></i></a>
             </div>
         </footer>
     </div>
