deploy: giorgioercixu/flask-personal@014fa2459e34e784c6fc19da0cda19c23588a9ad

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li class="media mb-3">
             <div class="media-body">
                 <ul>
+                    <li>May  2024: Invited to serve TPC for FAST'25.</li>
                     <li>Apr. 2024: Invited to give a virtual talk on Cloud Block Store at UIUC <a href="https://systems-seminar-uiuc.github.io/spring24/" target="_blank" rel="noopener">Systems Research Seminar 2024 Spring</a>.</li>
                     <li>Apr. 2024: Invited to serve TPC for NSDI'25, DSN'25 and Chinasys'24 Summer.</li>
                     <li>Mar. 2024: Invited to give a virtual guest lecture on cloud computing at <a href="https://changlousys.github.io/CS4740/spring24/schedule/" target="_blank" rel="noopener">University of Virginia</a>.</li>
@@ -105,6 +106,7 @@
             <div class="media-body">
                 <h5 class="mt-0 mb-1">Technical Program Committee Member</h5>
                 <ul>
+                    <li>USENIX FAST: 2025</li>
                     <li>USENIX NSDI: 2025</li>
                     <li>DSN: 2025</li>
                     <li>Chinasys: 2021 (Winter), 2023 (Fall), 2024 (Summer)</li>
