--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li class="media mb-3">
             <div class="media-body">
                 <ul>
+                    <li>Aug. 2024: Our paper on EBS traffic analysis has been accepted to Eurosys'25. See you guys in Rotterdam.</li>
                     <li>May  2024: Invited to give a virtual talk at Northeastern
                     University and Boston University.</li>
                     <li>May  2024: Invited to serve TPC for FAST'25.</li>
