deploy: giorgioercixu/flask-personal@55b5a2ce39a2670bd75c17b7026b4b5921f535b7

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li class="media mb-3">
             <div class="media-body">
                 <ul>
+                    <li>Sep. 2024: Invited serve PC for Eurosys'25 (Fall). See you guys in Rotterdam, again.</li>
                     <li>Aug. 2024: Our paper on EBS traffic analysis has been accepted to Eurosys'25. See you guys in Rotterdam.</li>
                     <li>May  2024: Invited to give a virtual talk at Northeastern
                     University and Boston University.</li>
@@ -111,6 +112,7 @@
                 <ul>
                     <li>USENIX FAST: 2025</li>
                     <li>USENIX NSDI: 2025</li>
+                    <li>ACM Eurosys: 2025 (Fall)</li>
                     <li>DSN: 2025</li>
                     <li>Chinasys: 2021 (Winter), 2023 (Fall), 2024 (Summer)</li>
                 </ul>
