deploy: giorgioercixu/flask-personal@feb9e1b1a21c6614e75c557cc02f792294878080

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         <li class="media mb-3">
             <div class="media-body">
                 <ul>
+                    <li>Sep. 2024: Invited to give a talk on "How I Learned to Stop Worrying and Love Doing System Research" at MBZUAI.</li>
                     <li>Sep. 2024: Invited serve PC for Eurosys'25 (Fall). See you guys in Rotterdam, again.</li>
+                    <li>Aug. 2024: Invited to give a talk on "How to Write a System Paper" at Arizona University.</li>
                     <li>Aug. 2024: Our paper on EBS traffic analysis has been accepted to Eurosys'25. See you guys in Rotterdam.</li>
                     <li>May  2024: Invited to give a virtual talk at Northeastern
                     University and Boston University.</li>
