deploy: giorgioercixu/flask-personal@729fa0dda60d806ff0400ee567e22b91ec73ec8f

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li class="media mb-3">
             <div class="media-body">
                 <ul>
+                    <li>Sep. 2024: Invited to serve PC for ICDCS'25.</li>
                     <li>Sep. 2024: One paper has been accepted to ACM ToS.</li>
                     <li>Sep. 2024: Invited to give a talk on "How I Learned to Stop Worrying and Love Doing System Research" at MBZUAI.</li>
                     <li>Sep. 2024: Invited serve PC for Eurosys'25 (Fall). See you guys in Rotterdam, again.</li>
@@ -116,7 +117,8 @@
                     <li>USENIX FAST: 2025</li>
                     <li>USENIX NSDI: 2025</li>
                     <li>ACM Eurosys: 2025 (Fall)</li>
-                    <li>DSN: 2025</li>
+                    <li>IEEE ICDCS: 2025</li>
+                    <li>IEEE DSN: 2025</li>
                     <li>Chinasys: 2021 (Winter), 2023 (Fall), 2024 (Summer)</li>
                 </ul>
             </div>
