--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li class="media mb-3">
             <div class="media-body">
                 <ul>
+                    <li>Oct. 2024: Invited to serve PC for USENIX ATC'25.</li>
                     <li>Sep. 2024: Invited to serve PC for ICDCS'25.</li>
                     <li>Sep. 2024: One paper has been accepted to ACM ToS.</li>
                     <li>Sep. 2024: Invited to give a talk on "How I Learned to Stop Worrying and Love Doing System Research" at MBZUAI.</li>
@@ -116,6 +117,7 @@
                 <ul>
                     <li>USENIX FAST: 2025</li>
                     <li>USENIX NSDI: 2025</li>
+                    <li>USENIX ATC: 2025</li>
                     <li>ACM Eurosys: 2025 (Fall)</li>
                     <li>IEEE ICDCS: 2025</li>
                     <li>IEEE DSN: 2025</li>
