deploy: giorgioercixu/flask-personal@ab0344c3c69bbff2884749463a47dda3432a633a

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li class="media mb-3">
             <div class="media-body">
                 <ul>
+                    <li>Nov. 2024: Invited to serve PC for USENIX FAST'26.</li>
                     <li>Oct. 2024: Invited to serve PC for USENIX ATC'25.</li>
                     <li>Sep. 2024: Invited to serve PC for ICDCS'25.</li>
                     <li>Sep. 2024: One paper has been accepted to ACM ToS.</li>
@@ -115,7 +116,7 @@
             <div class="media-body">
                 <h5 class="mt-0 mb-1">Technical Program Committee Member</h5>
                 <ul>
-                    <li>USENIX FAST: 2025</li>
+                    <li>USENIX FAST: 2025, 2026</li>
                     <li>USENIX NSDI: 2025</li>
                     <li>USENIX ATC: 2025</li>
                     <li>ACM Eurosys: 2025 (Fall)</li>
