deploy: giorgioercixu/flask-personal@d565127c054f3bbd5f22f4815bd945618fd7dbf0

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
         <li class="media mb-3">
             <div class="media-body">
                 <ul>
+                    <li>Dec. 2024: Our paper on merged metadata in DedupFS has been accepted by USENIX FAST'25. See you in Santa Clara.</li>
+                    <li>Dec. 2024: Our paper on scheduling cloud archival systems has been accepted by ACM TACO.</li>
                     <li>Nov. 2024: Invited to serve PC for USENIX FAST'26.</li>
                     <li>Oct. 2024: Invited to serve PC for USENIX ATC'25.</li>
                     <li>Sep. 2024: Invited to serve PC for ICDCS'25.</li>
