--- a/index.html
+++ b/index.html
@@ -83,21 +83,23 @@
         <li class="media mb-3">
             <div class="media-body">
                 <ul>
+                    <li>Dec. 2024: Invited to serve on USENIX NSDI'26 PC.</li>
+                    <li>Dec. 2024: Janki (FIU) and I are co-chairing the Poster & WiP for USENIX FAST'25. Submit by Jan. 17th.</li>
                     <li>Dec. 2024: Our paper on merged metadata in DedupFS has been accepted by USENIX FAST'25. See you in Santa Clara.</li>
                     <li>Dec. 2024: Our paper on scheduling cloud archival systems has been accepted by ACM TACO.</li>
-                    <li>Nov. 2024: Invited to serve PC for USENIX FAST'26.</li>
-                    <li>Oct. 2024: Invited to serve PC for USENIX ATC'25.</li>
-                    <li>Sep. 2024: Invited to serve PC for ICDCS'25.</li>
+                    <li>Nov. 2024: Invited to serve on USENIX FAST'26 PC.</li>
+                    <li>Oct. 2024: Invited to serve on USENIX ATC'25 PC.</li>
+                    <li>Sep. 2024: Invited to serve on ICDCS'25 PC.</li>
                     <li>Sep. 2024: One paper has been accepted to ACM ToS.</li>
                     <li>Sep. 2024: Invited to give a talk on "How I Learned to Stop Worrying and Love Doing System Research" at MBZUAI.</li>
-                    <li>Sep. 2024: Invited serve PC for Eurosys'25 (Fall). See you guys in Rotterdam, again.</li>
+                    <li>Sep. 2024: Invited serve on Eurosys'25 PC (Fall). See you guys in Rotterdam, again.</li>
                     <li>Aug. 2024: Invited to give a talk on "How to Write a System Paper" at Arizona State University.</li>
                     <li>Aug. 2024: Our paper on EBS traffic analysis has been accepted to Eurosys'25. See you guys in Rotterdam.</li>
                     <li>May  2024: Invited to give a virtual talk at Northeastern
                     University and Boston University.</li>
-                    <li>May  2024: Invited to serve TPC for FAST'25.</li>
+                    <li>May  2024: Invited to serve on FAST'25 PC.</li>
                     <li>Apr. 2024: Invited to give a virtual talk on Cloud Block Store at UIUC <a href="https://systems-seminar-uiuc.github.io/spring24/" target="_blank" rel="noopener">Systems Research Seminar 2024 Spring</a>.</li>
-                    <li>Apr. 2024: Invited to serve TPC for NSDI'25, DSN'25 and Chinasys'24 Summer.</li>
+                    <li>Apr. 2024: Invited to serve TPC on NSDI'25, DSN'25 and Chinasys'24 Summer.</li>
                     <li>Mar. 2024: Invited to give a virtual guest lecture on cloud computing at <a href="https://changlousys.github.io/CS4740/spring24/schedule/" target="_blank" rel="noopener">University of Virginia</a>.</li>
                     <li>Mar. 2024: Invited to give a talk on "How to Write a System Paper" at CUHK, Tsinghua University and HIT(SZ). Slides coming soon...</li>
                     <li>Feb. 2024: Our EBS paper has won FAST'24 Best Paper Award!</li>
@@ -119,7 +121,7 @@
                 <h5 class="mt-0 mb-1">Technical Program Committee Member</h5>
                 <ul>
                     <li>USENIX FAST: 2025, 2026</li>
-                    <li>USENIX NSDI: 2025</li>
+                    <li>USENIX NSDI: 2025, 2026</li>
                     <li>USENIX ATC: 2025</li>
                     <li>ACM Eurosys: 2025 (Fall)</li>
                     <li>IEEE ICDCS: 2025</li>
