--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2025" class="collapse show">
                     <ul>
-                        <li>Jan. 2025: Invited to serve on USENIX NSDI'27 PC.</li>
+                        <li>Jan. 2025: Invited to give a talk at ICT@CAS.</li>
                         <!-- Add more 2025 news here as they occur -->
                     </ul>
                 </div>
