deploy: giorgioercixu/flask-personal@48255a2531ea74b1c2fd3f8061c65c4a9202c120

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <!-- Bio section -->
             <h2 class="fs-3">Short Bio</h2>
             <p class="lead">
-                Erci Xu is a storage researcher who mostly focuses on distributed storage systems and software/hardware reliability. He has published multiple paper at top venues including USENIX OSDI, FAST, ATC and ACM Eurosys. Most (conferrence only) of his publications are listed <a href="./publication/" target="_blank" rel="noopener"> here</a>. He is the recipient of two USENIX FAST Best Paper Awards
-                <a href="https://www.usenix.org/conference/fast23/presentation/lu" target="_blank" rel="noopener">FAST'23</a>, <a href="https://www.usenix.org/conference/fast24/presentation/zhang-weidong" target="_blank" rel="noopener">FAST'24</a>, and ACM SIGOPS China <a href="https://www.sigops.org/2024/the-25th-chinasys-workshop" target="_blank" rel="noopener">Rising Star Award</a>.    
+                Erci Xu is a storage researcher who mostly focuses on distributed storage systems and software/hardware reliability. He has published multiple papers at top venues including USENIX OSDI, FAST, ATC and ACM Eurosys. Most (conferrence only) of his publications are listed <a href="./publication/" target="_blank" rel="noopener"> here</a>. He is the recipient of two USENIX FAST Best Paper Awards
+                <a href="https://www.usenix.org/conference/fast23/presentation/lu" target="_blank" rel="noopener">FAST'23</a>, <a href="https://www.usenix.org/conference/fast24/presentation/zhang-weidong" target="_blank" rel="noopener">FAST'24</a>, <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">Distinguished Artifacts Award</a> from FAST'25  and ACM SIGOPS China <a href="https://www.sigops.org/2024/the-25th-chinasys-workshop" target="_blank" rel="noopener">Rising Star Award</a>.    
                 In his spare time, Erci enjoys reading and reviewing books on <a href="https://www.goodreads.com/user/show/24628220-giorgio" target="_blank" rel="noopener">Goodreads</a>. Some of the reviews (mostly in Chinese) are also posted <a href="./posts/" target="_blank" rel="noopener"> here</a>.
             </p>
         </div>
@@ -86,6 +86,7 @@
                 <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2025" class="collapse show">
                     <ul>
+                        <li>Feb. 2025: GogetaFS has won Distinguished Artifacts @ FAST'25. Check the code <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">here</a>.</li>
                         <li>Jan. 2025: Invited to give a talk at ICT@CAS.</li>
                         <!-- Add more 2025 news here as they occur -->
                     </ul>
