--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
     <ul class="list-unstyled">
         <li class="media mb-3">
             <div class="media-body">
+                <h5 class="mt-0 mb-1">Program Co-chair</h5>
+                <ul>
+                    <li>WiP & Poster Program Co-Chair @ FAST'25</li>
+                </ul>
+            </div>
+        </li>
+        <li class="media mb-3">
+            <div class="media-body">
                 <h5 class="mt-0 mb-1">Technical Program Committee Member</h5>
                 <ul>
                     <li>USENIX FAST: 2025, 2026</li>
@@ -189,6 +197,7 @@
         </li>
     </ul>
 </div>
+
 
 <!-- Contact Section -->
 <div class="container my-5">
