--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
     </ul>
 </div>
 
+<div class="container my-5">
+    <h3 class="mb-3">My Music Playlist</h3>
+    <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation-by-user-activation" src="<iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/playlist/crave-4-da-fav/pl.u-55D66LqfYoaMee"></iframe>"></iframe>
+</div>
 
 
 <!-- Contact Section -->
