--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2025" class="collapse show">
                     <ul>
+                        <li>Mar. 2025: Invited to give a (virtual) talk at Iowa State University.</li>
                         <li>Feb. 2025: GogetaFS has won Distinguished Artifacts @ FAST'25. Check the code <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">here</a>.</li>
                         <li>Jan. 2025: Invited to give a talk at ICT@CAS.</li>
                         <!-- Add more 2025 news here as they occur -->
