--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2025" class="collapse show">
                     <ul>
+                        <li>Apr. 2025: Juncheng Yang and I will co-chair .</li>
                         <li>Mar. 2025: Invited to give a (virtual) talk at Iowa State University.</li>
                         <li>Feb. 2025: GogetaFS has won Distinguished Artifacts @ FAST'25. Check the code <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">here</a>.</li>
                         <li>Jan. 2025: Invited to give a talk at ICT@CAS.</li>
@@ -162,6 +163,8 @@
             <div class="media-body">
                 <h5 class="mt-0 mb-1">Program Co-chair</h5>
                 <ul>
+                    <li>Artifact Evaluation Committee Co-Chair @ FAST'26</li>
+                    <li>File System, Storage, and Database Area Chair @ Chinasys'25</li>
                     <li>WiP & Poster Program Co-Chair @ FAST'25</li>
                 </ul>
             </div>
@@ -223,7 +226,7 @@
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
-                <span class="text-muted">© 2024 G(E)X; All Rights Reserved!</span>
+                <span class="text-muted">© 2025 G(E)X; All Rights Reserved!</span>
             </div>
         </footer>
     </div>
