--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2025" class="collapse show">
                     <ul>
-                        <li>Apr. 2025: Juncheng Yang and I will co-chair .</li>
+                        <li>Apr. 2025: Juncheng Yang and I will co-chair FAST'26 Artifact Evaluation Committee. Self-nominate for AEC and submit your artifacts !!!</li>
                         <li>Mar. 2025: Invited to give a (virtual) talk at Iowa State University.</li>
                         <li>Feb. 2025: GogetaFS has won Distinguished Artifacts @ FAST'25. Check the code <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">here</a>.</li>
                         <li>Jan. 2025: Invited to give a talk at ICT@CAS.</li>
