deploy: giorgioercixu/flask-personal@6315495faa16e3b523559f0ed89a255ce73bbe7c

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <!-- Bio section -->
             <h2 class="fs-3">Short Bio</h2>
             <p class="lead">
-                Erci Xu is a storage researcher who mostly focuses on distributed storage systems and software/hardware reliability. He has published multiple papers at top venues including USENIX OSDI, FAST, ATC and ACM Eurosys. Most (conferrence only) of his publications are listed <a href="./publication/" target="_blank" rel="noopener"> here</a>. He is the recipient of two USENIX FAST Best Paper Awards
+                Erci Xu is a tenure-track associate professor @ Shanghai Jiao Tong University who mostly focuses on cloud, storage systems, reliability and infrastructure for AI. He has published multiple papers at top venues including USENIX OSDI, FAST, ATC and ACM Eurosys. Most (conferrence only) of his publications are listed <a href="./publication/" target="_blank" rel="noopener"> here</a>. He is the recipient of two USENIX FAST Best Paper Awards
                 <a href="https://www.usenix.org/conference/fast23/presentation/lu" target="_blank" rel="noopener">FAST'23</a>, <a href="https://www.usenix.org/conference/fast24/presentation/zhang-weidong" target="_blank" rel="noopener">FAST'24</a>, <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">Distinguished Artifacts Award</a> from FAST'25  and ACM SIGOPS China <a href="https://www.sigops.org/2024/the-25th-chinasys-workshop" target="_blank" rel="noopener">Rising Star Award</a>.    
                 In his spare time, Erci enjoys reading and reviewing books on <a href="https://www.goodreads.com/user/show/24628220-giorgio" target="_blank" rel="noopener">Goodreads</a>. Some of the reviews (mostly in Chinese) are also posted <a href="./posts/" target="_blank" rel="noopener"> here</a>.
             </p>
@@ -76,6 +76,12 @@
     </div>
 </div>
 
+<div class="container my-5">
+    <div class="alert alert-success text-center" role="alert" style="font-size: 1.2rem; border: 2px solid #28a745; border-radius: 10px;">
+        <strong>🚀🚀🚀Exciting Opportunity!!!</strong> I am currently recruiting <strong>Undergrad/MS/PhD students</strong> who are passionate about <em>cloud computing, storage systems, and LLMSys</em>. 
+        If you're interested, feel free to <a href="#contact" class="alert-link">reach out</a> by emails!
+    </div>
+</div>
 
 <div class="container my-5">
     <h3 class="mb-3">News</h3>
@@ -86,6 +92,8 @@
                 <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2025" class="collapse show">
                     <ul>
+                        <li>May 2025: Joined Shanghai Jiao Tong University as a tenure-track associate professor!!!</li>
+                        <li>May 2025: Invited to serve on DSN'26 PC.</li>
                         <li>Apr. 2025: Juncheng Yang and I will co-chair FAST'26 Artifact Evaluation Committee. Self-nominate for AEC and submit your artifacts !!!</li>
                         <li>Mar. 2025: Invited to give a (virtual) talk at Iowa State University.</li>
                         <li>Feb. 2025: GogetaFS has won Distinguished Artifacts @ FAST'25. Check the code <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">here</a>.</li>
@@ -216,6 +224,7 @@
             <h3>Contact Me</h3>
             <p>If you have any questions or need to reach out, please contact me at:</p>
             <p><span class="blur-text">jostep90 [at] Google's eMAIL service [dot] com</span></p>
+            <p><span class="blur-text">OR: ercixu [at] SJTU [dot] edu [dot] cn</span></p>
         </div>
     </div>
 </div>
@@ -254,7 +263,6 @@
                     }
                 }
         
-                // Apply the stored theme; if none stored, set based on time
                 if (storedTheme) {
                     body.classList.add(storedTheme);
                     themeToggle.textContent = storedTheme === 'dark-theme' ? 'Light Mode' : 'Dark Mode';
