deploy: giorgioercixu/flask-personal@812685de6180475048eb85aac350bf2fc7a5b4a3

--- a/index.html
+++ b/index.html
@@ -79,7 +79,19 @@
 <div class="container my-5">
     <div class="alert alert-success text-center" role="alert" style="font-size: 1.2rem; border: 2px solid #28a745; border-radius: 10px;">
         <strong>🚀🚀🚀Exciting Opportunity!!!</strong> I am currently recruiting <strong>Undergrad/MS/PhD students</strong> who are passionate about <em>cloud computing, storage systems, and LLMSys</em>. 
-        If you're interested, feel free to <a href="#contact" class="alert-link">reach out</a> by emails!
+        If you're interested, feel free to reach out by emails!
+    </div>
+</div>
+
+<!-- Contact Section -->
+<div class="container my-5">
+    <div class="row">
+        <div class="col-md-12">
+            <h3>Contact Me</h3>
+            <p>If you have any questions or need to reach out, please contact me at:</p>
+            <p><span class="blur-text">jostep90 [at] Google's eMAIL service [dot] com</span></p>
+            <p><span class="blur-text">OR: ercixu [at] SJTU [dot] edu [dot] cn</span></p>
+        </div>
     </div>
 </div>
 
@@ -186,7 +198,7 @@
                     <li>USENIX ATC: 2025</li>
                     <li>ACM Eurosys: 2025 (Fall)</li>
                     <li>IEEE ICDCS: 2025</li>
-                    <li>IEEE DSN: 2025</li>
+                    <li>IEEE DSN: 2025, 2026</li>
                     <li>Chinasys: 2021 (Winter), 2023 (Fall), 2024 (Summer)</li>
                 </ul>
             </div>
@@ -217,17 +229,7 @@
 </div>
 
 
-<!-- Contact Section -->
-<div class="container my-5">
-    <div class="row">
-        <div class="col-md-12">
-            <h3>Contact Me</h3>
-            <p>If you have any questions or need to reach out, please contact me at:</p>
-            <p><span class="blur-text">jostep90 [at] Google's eMAIL service [dot] com</span></p>
-            <p><span class="blur-text">OR: ercixu [at] SJTU [dot] edu [dot] cn</span></p>
-        </div>
-    </div>
-</div>
+
 
 
     </div>
