deploy: giorgioercixu/flask-personal@5dc86781e909d64ddff6114fe38099f27da7f1e2

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2025" class="collapse show">
                     <ul>
+                        <li>June 2025: Invited to give a (virtual) talk at Imperial College London.</li>
                         <li>May 2025: Joined Shanghai Jiao Tong University as a tenure-track associate professor!!!</li>
                         <li>May 2025: Invited to serve on DSN'26 PC.</li>
                         <li>Apr. 2025: Juncheng Yang and I will co-chair FAST'26 Artifact Evaluation Committee. Self-nominate for AEC and submit your artifacts !!!</li>
