--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
                 <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2025" class="collapse show">
                     <ul>
-                        <li>June 2025: Invited to give a (virtual) talk at Imperial College London.</li>
+                        <li>Jul. 2025: Sandman has been accepted to ACM SOSP'25. Congrats to Yanbo and the team! See you guys in Seoul!</li>
+                        <li>Jun. 2025: Invited to give a (virtual) talk at Imperial College London.</li>
                         <li>May 2025: Joined Shanghai Jiao Tong University as a tenure-track associate professor!!!</li>
                         <li>May 2025: Invited to serve on DSN'26 PC.</li>
+                        <li>Apr. 2025: CableCache has been accepted to USENIX HotStorage'25.</li>
                         <li>Apr. 2025: Juncheng Yang and I will co-chair FAST'26 Artifact Evaluation Committee. Self-nominate for AEC and submit your artifacts !!!</li>
                         <li>Mar. 2025: Invited to give a (virtual) talk at Iowa State University.</li>
                         <li>Feb. 2025: GogetaFS has won Distinguished Artifacts @ FAST'25. Check the code <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">here</a>.</li>
