--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2025" class="collapse show">
                     <ul>
-                        <li>Aug. 2025: Invited to serve on FAST'27 PC.</li>
+                        <li>Aug. 2025: Invited to serve on OSDI'26 and FAST'27 PC.</li>
                         <li>Jul. 2025: Sandman has been accepted to ACM SOSP'25. Congrats to Yanbo and the team! See you guys in Seoul!</li>
                         <li>Jun. 2025: Invited to give a (virtual) talk at Imperial College London.</li>
                         <li>May 2025: Joined Shanghai Jiao Tong University as a tenure-track associate professor!!!</li>
@@ -197,6 +197,7 @@
             <div class="media-body">
                 <h5 class="mt-0 mb-1">Technical Program Committee Member</h5>
                 <ul>
+                    <li>USENIX OSDI: 2026</li>
                     <li>USENIX FAST: 2025, 2026, 2027</li>
                     <li>USENIX NSDI: 2025, 2026</li>
                     <li>USENIX ATC: 2025</li>
