deploy: giorgioercixu/flask-personal@0fdb3675964da111051546247e3d0caa095f4c27

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
             <div class="media-body">
                 <h5 class="mt-0 mb-1">Program Co-chair</h5>
                 <ul>
+                    <li>Doctoral Workshop Co-Chair @ ACM SOSP'26</li>
                     <li>Artifact Evaluation Committee Co-Chair @ FAST'26</li>
                     <li>File System, Storage, and Database Area Chair @ Chinasys'25</li>
                     <li>WiP & Poster Program Co-Chair @ FAST'25</li>
