deploy: giorgioercixu/flask-personal@4bf728190783195ab50483a562d3be04c811c983

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2025" class="collapse show">
                     <ul>
+                        <li>Aug. 2025: Omar has been accepted to ACM Eurosys'26. Congrats to Xinqi and the team! See you guys in Edinburgh!</li>
                         <li>Aug. 2025: Invited to serve on OSDI'26 and FAST'27 PC.</li>
                         <li>Jul. 2025: Sandman has been accepted to ACM SOSP'25. Congrats to Yanbo and the team! See you guys in Seoul!</li>
                         <li>Jun. 2025: Invited to give a (virtual) talk at Imperial College London.</li>
