deploy: giorgioercixu/flask-personal@eea35b3a3c750f9b5791d5c3c9de440270a3e441

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- Current Year (2025) - Expanded by Default -->
         <li class="media mb-3">
             <div class="media-body">
-                <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
+                <h5><button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2025" class="collapse show">
                     <ul>
                         <li>Aug. 2025: Received CCF-IST Youth Innovation Award.</li>
@@ -125,7 +125,7 @@
         <!-- Previous Year (2024) - Collapsible -->
         <li class="media mb-3">
             <div class="media-body">
-                <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2024">2024 <i class="fas fa-chevron-down"></i></button></h5>
+                <h5><button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#news2024">2024 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2024" class="collapse">
                     <ul>
                         <li>Dec. 2024: Invited to serve on USENIX NSDI'26 PC.</li>
@@ -157,7 +157,7 @@
         <!-- Previous Year (2023) - Collapsible -->
         <li class="media mb-3">
             <div class="media-body">
-                <h5><button class="btn btn-link" data-toggle="collapse" data-target="#news2023">2023 <i class="fas fa-chevron-down"></i></button></h5>
+                <h5><button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#news2023">2023 <i class="fas fa-chevron-down"></i></button></h5>
                 <div id="news2023" class="collapse">
                     <ul>
                         <li>Dec. 2023: Won ACM SIGOPS China <a href="https://www.sigops.org/2024/the-25th-chinasys-workshop" target="_blank" rel="noopener">Rising Star Award</a>.</li>
@@ -169,14 +169,10 @@
 </div>
 
 <!-- JavaScript for Toggle Effect -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-    // Expand only the 2025 section by default
-    $(document).ready(function() {
-        $('#news2025').collapse('show');  // Keep 2025 expanded by default
-        $('#news2024').collapse('hide');  // Keep 2024 collapsed by default
-        $('#news2023').collapse('hide');  // Keep 2023 collapsed by default
+    // Expand only the 2025 section by default (using Bootstrap 5)
+    document.addEventListener('DOMContentLoaded', function() {
+        // 2025 section is already expanded with 'show' class, others are collapsed by default
     });
 </script>
 
@@ -245,7 +241,7 @@
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
-                <span class="text-muted">©  G(E)X; All Rights Reserved!</span>
+                <span class="text-muted">© 2025 G(E)X; All Rights Reserved!</span>
             </div>
         </footer>
     </div>
