--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Preconnect to Apple Music for faster loading -->
+    <link rel="preconnect" href="https://embed.music.apple.com">
+    <link rel="dns-prefetch" href="https://embed.music.apple.com">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/style.css">  <!-- Link to your main.css file -->
@@ -97,84 +100,88 @@
 
 <div class="container my-5">
     <h3 class="mb-3">News</h3>
-    <ul class="list-unstyled">
+    <div class="accordion" id="newsAccordion">
         <!-- Current Year (2025) - Expanded by Default -->
-        <li class="media mb-3">
-            <div class="media-body">
-                <h5><button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#news2025">2025 <i class="fas fa-chevron-down"></i></button></h5>
-                <div id="news2025" class="collapse show">
-                    <ul>
-                        <li>Aug. 2025: Received CCF-IST Youth Innovation Award.</li>
-                        <li>Aug. 2025: Omar has been accepted to ACM Eurosys'26. Congrats to Xinqi and the team! See you guys in Edinburgh!</li>
-                        <li>Aug. 2025: Invited to serve on OSDI'26 and FAST'27 PC.</li>
-                        <li>Jul. 2025: Sandman has been accepted to ACM SOSP'25. Congrats to Yanbo and the team! See you guys in Seoul!</li>
-                        <li>Jun. 2025: Invited to give a (virtual) talk at Imperial College London.</li>
-                        <li>May 2025: Joined Shanghai Jiao Tong University as a tenure-track associate professor!!!</li>
-                        <li>May 2025: Invited to serve on DSN'26 PC.</li>
-                        <li>Apr. 2025: CableCache has been accepted to USENIX HotStorage'25.</li>
-                        <li>Apr. 2025: Juncheng Yang and I will co-chair FAST'26 Artifact Evaluation Committee. Self-nominate for AEC and submit your artifacts !!!</li>
-                        <li>Mar. 2025: Invited to give a (virtual) talk at Iowa State University.</li>
-                        <li>Feb. 2025: GogetaFS has won Distinguished Artifacts @ FAST'25. Check the code <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">here</a>.</li>
-                        <li>Jan. 2025: Invited to give a talk at ICT@CAS.</li>
-                        <!-- Add more 2025 news here as they occur -->
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2025" aria-expanded="true" aria-controls="collapse2025">
+                    2025
+                </button>
+            </h2>
+            <div id="collapse2025" class="accordion-collapse collapse show" data-bs-parent="#newsAccordion">
+                <div class="accordion-body">
+                    <ul class="list-unstyled">
+                        <li class="mb-2">Aug. 2025: Received CCF-IST Youth Innovation Award.</li>
+                        <li class="mb-2">Aug. 2025: Omar has been accepted to ACM Eurosys'26. Congrats to Xinqi and the team! See you guys in Edinburgh!</li>
+                        <li class="mb-2">Aug. 2025: Invited to serve on OSDI'26 and FAST'27 PC.</li>
+                        <li class="mb-2">Jul. 2025: Sandman has been accepted to ACM SOSP'25. Congrats to Yanbo and the team! See you guys in Seoul!</li>
+                        <li class="mb-2">Jun. 2025: Invited to give a (virtual) talk at Imperial College London.</li>
+                        <li class="mb-2">May 2025: Joined Shanghai Jiao Tong University as a tenure-track associate professor!!!</li>
+                        <li class="mb-2">May 2025: Invited to serve on DSN'26 PC.</li>
+                        <li class="mb-2">Apr. 2025: CableCache has been accepted to USENIX HotStorage'25.</li>
+                        <li class="mb-2">Apr. 2025: Juncheng Yang and I will co-chair FAST'26 Artifact Evaluation Committee. Self-nominate for AEC and submit your artifacts !!!</li>
+                        <li class="mb-2">Mar. 2025: Invited to give a (virtual) talk at Iowa State University.</li>
+                        <li class="mb-2">Feb. 2025: GogetaFS has won Distinguished Artifacts @ FAST'25. Check the code <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">here</a>.</li>
+                        <li class="mb-2">Jan. 2025: Invited to give a talk at ICT@CAS.</li>
                     </ul>
                 </div>
             </div>
-        </li>
+        </div>
 
-        <!-- Previous Year (2024) - Collapsible -->
-        <li class="media mb-3">
-            <div class="media-body">
-                <h5><button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#news2024">2024 <i class="fas fa-chevron-down"></i></button></h5>
-                <div id="news2024" class="collapse">
-                    <ul>
-                        <li>Dec. 2024: Invited to serve on USENIX NSDI'26 PC.</li>
-                        <li>Dec. 2024: Janki (FIU) and I are co-chairing the Poster & WiP for USENIX FAST'25. Submit by Jan. 17th.</li>
-                        <li>Dec. 2024: Our paper on merged metadata in DedupFS has been accepted by USENIX FAST'25. See you in Santa Clara.</li>
-                        <li>Dec. 2024: Our paper on scheduling cloud archival systems has been accepted by ACM TACO.</li>
-                        <li>Nov. 2024: Invited to serve on USENIX FAST'26 PC.</li>
-                        <li>Oct. 2024: Invited to serve on USENIX ATC'25 PC.</li>
-                        <li>Sep. 2024: Invited to serve on ICDCS'25 PC.</li>
-                        <li>Sep. 2024: One paper has been accepted to ACM ToS.</li>
-                        <li>Sep. 2024: Invited to give a talk on "How I Learned to Stop Worrying and Love Doing System Research" at MBZUAI.</li>
-                        <li>Sep. 2024: Invited to serve on Eurosys'25 PC (Fall). See you guys in Rotterdam, again.</li>
-                        <li>Aug. 2024: Invited to give a talk on "How to Write a System Paper" at Arizona State University.</li>
-                        <li>Aug. 2024: Our paper on EBS traffic analysis has been accepted to Eurosys'25. See you guys in Rotterdam.</li>
-                        <li>May 2024: Invited to give a virtual talk at Northeastern University and Boston University.</li>
-                        <li>May 2024: Invited to serve on FAST'25 PC.</li>
-                        <li>Apr. 2024: Invited to give a virtual talk on Cloud Block Store at UIUC <a href="https://systems-seminar-uiuc.github.io/spring24/" target="_blank" rel="noopener">Systems Research Seminar 2024 Spring</a>.</li>
-                        <li>Apr. 2024: Invited to serve TPC on NSDI'25, DSN'25 and Chinasys'24 Summer.</li>
-                        <li>Mar. 2024: Invited to give a virtual guest lecture on cloud computing at <a href="https://changlousys.github.io/CS4740/spring24/schedule/" target="_blank" rel="noopener">University of Virginia</a>.</li>
-                        <li>Mar. 2024: Invited to give a talk on "How to Write a System Paper" at CUHK, Tsinghua University and HIT(SZ). Slides coming soon...</li>
-                        <li>Feb. 2024: Our EBS paper has won FAST'24 Best Paper Award!</li>
-                        <li>Feb. 2024: Our paper on defending Ransomware in the Cloud has been accepted to OSDI'24. See you guys in Santa Clara.</li>
-                        <li>Jan. 2024: Invited to give a talk on "How to Write a System Paper" at Zhejiang University.</li>
+        <!-- Previous Year (2024) - Collapsed by Default -->
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2024" aria-expanded="false" aria-controls="collapse2024">
+                    2024
+                </button>
+            </h2>
+            <div id="collapse2024" class="accordion-collapse collapse" data-bs-parent="#newsAccordion">
+                <div class="accordion-body">
+                    <ul class="list-unstyled">
+                        <li class="mb-2">Dec. 2024: Invited to serve on USENIX NSDI'26 PC.</li>
+                        <li class="mb-2">Dec. 2024: Janki (FIU) and I are co-chairing the Poster & WiP for USENIX FAST'25. Submit by Jan. 17th.</li>
+                        <li class="mb-2">Dec. 2024: Our paper on merged metadata in DedupFS has been accepted by USENIX FAST'25. See you in Santa Clara.</li>
+                        <li class="mb-2">Dec. 2024: Our paper on scheduling cloud archival systems has been accepted by ACM TACO.</li>
+                        <li class="mb-2">Nov. 2024: Invited to serve on USENIX FAST'26 PC.</li>
+                        <li class="mb-2">Oct. 2024: Invited to serve on USENIX ATC'25 PC.</li>
+                        <li class="mb-2">Sep. 2024: Invited to serve on ICDCS'25 PC.</li>
+                        <li class="mb-2">Sep. 2024: One paper has been accepted to ACM ToS.</li>
+                        <li class="mb-2">Sep. 2024: Invited to give a talk on "How I Learned to Stop Worrying and Love Doing System Research" at MBZUAI.</li>
+                        <li class="mb-2">Sep. 2024: Invited to serve on Eurosys'25 PC (Fall). See you guys in Rotterdam, again.</li>
+                        <li class="mb-2">Aug. 2024: Invited to give a talk on "How to Write a System Paper" at Arizona State University.</li>
+                        <li class="mb-2">Aug. 2024: Our paper on EBS traffic analysis has been accepted to Eurosys'25. See you guys in Rotterdam.</li>
+                        <li class="mb-2">May 2024: Invited to give a virtual talk at Northeastern University and Boston University.</li>
+                        <li class="mb-2">May 2024: Invited to serve on FAST'25 PC.</li>
+                        <li class="mb-2">Apr. 2024: Invited to give a virtual talk on Cloud Block Store at UIUC <a href="https://systems-seminar-uiuc.github.io/spring24/" target="_blank" rel="noopener">Systems Research Seminar 2024 Spring</a>.</li>
+                        <li class="mb-2">Apr. 2024: Invited to serve TPC on NSDI'25, DSN'25 and Chinasys'24 Summer.</li>
+                        <li class="mb-2">Mar. 2024: Invited to give a virtual guest lecture on cloud computing at <a href="https://changlousys.github.io/CS4740/spring24/schedule/" target="_blank" rel="noopener">University of Virginia</a>.</li>
+                        <li class="mb-2">Mar. 2024: Invited to give a talk on "How to Write a System Paper" at CUHK, Tsinghua University and HIT(SZ). Slides coming soon...</li>
+                        <li class="mb-2">Feb. 2024: Our EBS paper has won FAST'24 Best Paper Award!</li>
+                        <li class="mb-2">Feb. 2024: Our paper on defending Ransomware in the Cloud has been accepted to OSDI'24. See you guys in Santa Clara.</li>
+                        <li class="mb-2">Jan. 2024: Invited to give a talk on "How to Write a System Paper" at Zhejiang University.</li>
                     </ul>
                 </div>
             </div>
-        </li>
+        </div>
 
-        <!-- Previous Year (2023) - Collapsible -->
-        <li class="media mb-3">
-            <div class="media-body">
-                <h5><button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#news2023">2023 <i class="fas fa-chevron-down"></i></button></h5>
-                <div id="news2023" class="collapse">
-                    <ul>
-                        <li>Dec. 2023: Won ACM SIGOPS China <a href="https://www.sigops.org/2024/the-25th-chinasys-workshop" target="_blank" rel="noopener">Rising Star Award</a>.</li>
+        <!-- Previous Year (2023) - Collapsed by Default -->
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2023" aria-expanded="false" aria-controls="collapse2023">
+                    2023
+                </button>
+            </h2>
+            <div id="collapse2023" class="accordion-collapse collapse" data-bs-parent="#newsAccordion">
+                <div class="accordion-body">
+                    <ul class="list-unstyled">
+                        <li class="mb-2">Dec. 2023: Won ACM SIGOPS China <a href="https://www.sigops.org/2024/the-25th-chinasys-workshop" target="_blank" rel="noopener">Rising Star Award</a>.</li>
                     </ul>
                 </div>
             </div>
-        </li>
-    </ul>
+        </div>
+    </div>
 </div>
 
-<!-- JavaScript for Toggle Effect -->
-<script>
-    // Expand only the 2025 section by default (using Bootstrap 5)
-    document.addEventListener('DOMContentLoaded', function() {
-        // 2025 section is already expanded with 'show' class, others are collapsed by default
-    });
-</script>
 
 
 <!-- Professional Service Section -->
@@ -229,7 +236,15 @@
 <div class="container my-5">
     <h3 class="mb-3">Crave 4 da Fav</h3>
     <p>If you haven't followed this playlist, you probably should. Enjoy!</p>
-    <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/playlist/crave-4-da-fav/pl.u-55D66LqfYoaMee"></iframe>
+    <iframe 
+        allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" 
+        frameborder="0" 
+        height="450" 
+        style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" 
+        sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" 
+        src="https://embed.music.apple.com/us/playlist/crave-4-da-fav/pl.u-55D66LqfYoaMee"
+        loading="eager">
+    </iframe>
 </div>
 
 
