deploy: giorgioercixu/flask-personal@327ffb0f0061d3301bfc2a9915c6e3fc444b7a5e

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <ul class="list-unstyled">
                         <li class="mb-2">Aug. 2025: Received CCF-IST Youth Innovation Award.</li>
                         <li class="mb-2">Aug. 2025: Omar has been accepted to ACM Eurosys'26. Congrats to Xinqi and the team! See you guys in Edinburgh!</li>
-                        <li class="mb-2">Aug. 2025: Invited to serve on OSDI'26 and FAST'27 PC.</li>
+                        <li class="mb-2">Aug. 2025: Invited to serve on OSDI'26, FAST'27 PC and Eurosys'26 (Fall Cycle).</li>
                         <li class="mb-2">Jul. 2025: Sandman has been accepted to ACM SOSP'25. Congrats to Yanbo and the team! See you guys in Seoul!</li>
                         <li class="mb-2">Jun. 2025: Invited to give a (virtual) talk at Imperial College London.</li>
                         <li class="mb-2">May 2025: Joined Shanghai Jiao Tong University as a tenure-track associate professor!!!</li>
@@ -207,7 +207,7 @@
                     <li>USENIX FAST: 2025, 2026, 2027</li>
                     <li>USENIX NSDI: 2025, 2026</li>
                     <li>USENIX ATC: 2025</li>
-                    <li>ACM Eurosys: 2025 (Fall)</li>
+                    <li>ACM Eurosys: 2025 (Fall), 2026 (Fall)</li>
                     <li>IEEE ICDCS: 2025</li>
                     <li>IEEE DSN: 2025, 2026</li>
                     <li>Chinasys: 2021 (Winter), 2023 (Fall), 2024 (Summer)</li>
