deploy: giorgioercixu/flask-personal@ff04ede8363629da7caef44403de2ab5df7cccdc

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             <div id="collapse2025" class="accordion-collapse collapse show" data-bs-parent="#newsAccordion">
                 <div class="accordion-body">
                     <ul class="list-unstyled">
+                        <li class="mb-2">Oct. 2025: Received CCF Technical Advancement Award (2nd-Tier).</li>
                         <li class="mb-2">Aug. 2025: Received CCF-IST Youth Innovation Award.</li>
                         <li class="mb-2">Aug. 2025: Omar has been accepted to ACM Eurosys'26. Congrats to Xinqi and the team! See you guys in Edinburgh!</li>
                         <li class="mb-2">Aug. 2025: Invited to serve on OSDI'26, FAST'27 PC and Eurosys'26 (Fall Cycle).</li>
