--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                 <div class="accordion-body">
                     <ul class="list-unstyled">
                         <li class="mb-2">Oct. 2025: Received CCF Technical Advancement Award (2nd-Tier).</li>
+                        <li class="mb-2">Sep. 2025: Pengfei and I will co-chair this year's Chinasys Fall Cycle, submit your work <a href="https://mp.weixin.qq.com/s/lPH2ygtNx9hm4-LMMhfGhA" target="_blank" rel="noopener">here</a>..</li>
                         <li class="mb-2">Aug. 2025: Received CCF-IST Youth Innovation Award.</li>
                         <li class="mb-2">Aug. 2025: Omar has been accepted to ACM Eurosys'26. Congrats to Xinqi and the team! See you guys in Edinburgh!</li>
                         <li class="mb-2">Aug. 2025: Invited to serve on OSDI'26, FAST'27 PC and Eurosys'26 (Fall Cycle).</li>
