deploy: giorgioercixu/flask-personal@0c49d4e5100c6647d9e47d296e125ee397fca169

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
             <!-- Bio section -->
             <h2 class="fs-3">Short Bio</h2>
             <p class="lead">
-                Erci Xu is a tenure-track associate professor @ Shanghai Jiao Tong University who mostly focuses on cloud, storage systems, reliability and infrastructure for AI. He has published multiple papers at top venues including SOSP, OSDI, FAST, ATC and Eurosys. Most (conferrence only) of his publications are listed <a href="./publication/" target="_blank" rel="noopener"> here</a>. He is the recipient of two USENIX FAST Best Paper Awards
-                <a href="https://www.usenix.org/conference/fast23/presentation/lu" target="_blank" rel="noopener">FAST'23</a>, <a href="https://www.usenix.org/conference/fast24/presentation/zhang-weidong" target="_blank" rel="noopener">FAST'24</a>, <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">Distinguished Artifacts Award</a> from FAST'25  and ACM SIGOPS China <a href="https://www.sigops.org/2024/the-25th-chinasys-workshop" target="_blank" rel="noopener">Rising Star Award</a>.    
+                Erci Xu is a tenure-track associate professor @ Shanghai Jiao Tong University who mostly focuses on cloud, storage systems, reliability and infrastructure for AI. He has published multiple papers at top venues including SOSP, OSDI, FAST, ATC and Eurosys. Most (conferrence only) of his publications are listed <a href="./publication/" target="_blank" rel="noopener"> here</a>.
                 In his spare time, Erci enjoys reading and reviewing books on <a href="https://www.goodreads.com/user/show/24628220-giorgio" target="_blank" rel="noopener">Goodreads</a>. Some of the reviews (mostly in Chinese) are also posted <a href="./posts/" target="_blank" rel="noopener"> here</a>.
             </p>
         </div>
@@ -81,7 +80,7 @@
 
 <div class="container my-5">
     <div class="alert alert-success text-center" role="alert" style="font-size: 1.2rem; border: 2px solid #28a745; border-radius: 10px;">
-        <strong>🚀🚀🚀Exciting Opportunity!!!</strong> I am currently recruiting <strong>Undergrad/MS/PhD students</strong> who are passionate about <em>cloud computing, storage systems, and LLMSys</em>. 
+        <strong>🚀🚀🚀Exciting Opportunity!!!</strong> I am currently recruiting <strong>Undergrad/MS/PhD students</strong> who are passionate about <em>cloud computing, storage systems, and LLMSys</em>.
         If you're interested, feel free to reach out by emails!
     </div>
 </div>
@@ -111,6 +110,7 @@
             <div id="collapse2025" class="accordion-collapse collapse show" data-bs-parent="#newsAccordion">
                 <div class="accordion-body">
                     <ul class="list-unstyled">
+                        <li class="mb-2">Nov. 2025: Our paper on cloud observability has been accepted to OSDI'26 (one-shot revision from OSDI'25). Congrats to the DiTing Team!</li>
                         <li class="mb-2">Oct. 2025: Received CCF Technical Advancement Award (2nd-Tier).</li>
                         <li class="mb-2">Sep. 2025: Pengfei and I will co-chair this year's Chinasys Fall Cycle, submit your work <a href="https://mp.weixin.qq.com/s/lPH2ygtNx9hm4-LMMhfGhA" target="_blank" rel="noopener">here</a>..</li>
                         <li class="mb-2">Aug. 2025: Received CCF-IST Youth Innovation Award.</li>
@@ -196,7 +196,8 @@
                 <ul>
                     <li>Doctoral Workshop Co-Chair @ ACM SOSP'26</li>
                     <li>Artifact Evaluation Committee Co-Chair @ FAST'26</li>
-                    <li>File System, Storage, and Database Area Chair @ Chinasys'25</li>
+                    <li>Program Chair @ Chinasys'25 Winter</li>
+                    <li>File System, Storage, and Database Area Chair @ Chinasys'25 Spring</li>
                     <li>WiP & Poster Program Co-Chair @ FAST'25</li>
                 </ul>
             </div>
@@ -233,6 +234,19 @@
             </div>
         </li>
     </ul>
+</div>
+
+<!-- Awards Section -->
+<div class="container my-5">
+    <h3 class="mb-3">Awards</h3>
+    <ol>
+        <li>CCF Technical Advancement Award (2nd-Tier, 2025) - <a href="https://www.ccf.org.cn/Awards/Awards/2025-09-21/848657.shtml" target="_blank" rel="noopener">CCF Award Announcement</a></li>
+        <li>CCF-IST Youth Innovation Award (2025)
+        <li>Distinguished Artifacts Award from USENIX FAST'25 - <a href="https://github.com/GogetaFS/" target="_blank" rel="noopener">GogetaFS</a></li>
+        <li>USENIX FAST'24 Best Paper Award - <a href="https://www.usenix.org/conference/fast24/presentation/zhang-weidong" target="_blank" rel="noopener">What's the Story in EBS Glory</a></li>
+        <li>ACM SIGOPS China Rising Star Award (2023) - <a href="https://www.sigops.org/2024/the-25th-chinasys-workshop" target="_blank" rel="noopener">The 25th ChinaSys Workshop</a></li>
+        <li>USENIX FAST'23 Best Paper Award - <a href="https://www.usenix.org/conference/fast23/presentation/lu" target="_blank" rel="noopener">Perseus: A Fail-Slow Detection Framework</a></li>
+    </ol>
 </div>
 
 <div class="container my-5">
