--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <div id="collapse2025" class="accordion-collapse collapse show" data-bs-parent="#newsAccordion">
                 <div class="accordion-body">
                     <ul class="list-unstyled">
+                        <li class="mb-2">Nov. 2025: Invited to serve on Eurosys'27 PC.</li>
                         <li class="mb-2">Nov. 2025: Our paper on cloud observability has been accepted to OSDI'26 (one-shot revision from OSDI'25). Congrats to the DiTing Team!</li>
                         <li class="mb-2">Oct. 2025: Received CCF Technical Advancement Award (2nd-Tier).</li>
                         <li class="mb-2">Sep. 2025: Pengfei and I will co-chair this year's Chinasys Fall Cycle, submit your work <a href="https://mp.weixin.qq.com/s/lPH2ygtNx9hm4-LMMhfGhA" target="_blank" rel="noopener">here</a>..</li>
@@ -210,7 +211,7 @@
                     <li>USENIX FAST: 2025, 2026, 2027</li>
                     <li>USENIX NSDI: 2025, 2026</li>
                     <li>USENIX ATC: 2025</li>
-                    <li>ACM Eurosys: 2025 (Fall), 2026 (Fall)</li>
+                    <li>ACM Eurosys: 2025 (Fall), 2026 (Fall), 2027</li>
                     <li>IEEE ICDCS: 2025</li>
                     <li>IEEE DSN: 2025, 2026</li>
                     <li>Chinasys: 2021 (Winter), 2023 (Fall), 2024 (Summer)</li>
