deploy: giorgioercixu/flask-personal@c168414692afcda759119db688c5eec1cdeda359

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <div id="collapse2025" class="accordion-collapse collapse show" data-bs-parent="#newsAccordion">
                 <div class="accordion-body">
                     <ul class="list-unstyled">
+                        <li class="mb-2">Dec. 2025: Four papers have been accepted by FAST'26. Congrats to the teams! See you in Santa Clara.</li>
                         <li class="mb-2">Nov. 2025: Invited to serve on Eurosys'27 PC.</li>
                         <li class="mb-2">Nov. 2025: Our paper on cloud observability has been accepted to OSDI'26 (one-shot revision from OSDI'25). Congrats to the DiTing Team!</li>
                         <li class="mb-2">Oct. 2025: Received CCF Technical Advancement Award (2nd-Tier).</li>
@@ -195,6 +196,7 @@
             <div class="media-body">
                 <h5 class="mt-0 mb-1">Program Co-chair</h5>
                 <ul>
+                    <li>Artifact Evaluation Committee Co-Chair @ FAST'27</li>
                     <li>Doctoral Workshop Co-Chair @ ACM SOSP'26</li>
                     <li>Artifact Evaluation Committee Co-Chair @ FAST'26</li>
                     <li>Program Chair @ Chinasys'25 Winter</li>
