deploy: giorgioercixu/flask-personal@55f92143beb7cb805c6dfb021e938172510bd635

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <div id="collapse2025" class="accordion-collapse collapse show" data-bs-parent="#newsAccordion">
                 <div class="accordion-body">
                     <ul class="list-unstyled">
+                        <li class="mb-2">Dec. 2025: One paper has been accepted by NSDI'26. Congrats to the team! See you in Renton.</li>
                         <li class="mb-2">Dec. 2025: Four papers have been accepted by FAST'26. Congrats to the teams! See you in Santa Clara.</li>
                         <li class="mb-2">Nov. 2025: Invited to serve on Eurosys'27 PC.</li>
                         <li class="mb-2">Nov. 2025: Our paper on cloud observability has been accepted to OSDI'26 (one-shot revision from OSDI'25). Congrats to the DiTing Team!</li>
